2010-11-25  Francois Chouinard  <fchouinard@gmail.com>

	* src/org/eclipse/linuxtools/tmf/ui/viewers/timeAnalysis/widgets/TmfTimeStatesCtrl.java (drawItemDataBurst): Fixed the threading issue on the shared vector

2010-11-10  Francois Chouinard  <fchouinard@gmail.com>

    Suppress warning for non-externalized strings
	   * src/org/eclipse/linuxtools/tmf/ui/viewers/timeAnalysis/widgets/TmfTimeStatesCtrl.java: 
	   * src/org/eclipse/linuxtools/tmf/ui/views/project/dialogs/NewExperimentDialog.java: 
	   * src/org/eclipse/linuxtools/tmf/ui/views/project/ProjectView.java: 

2010-11-09  Francois Chouinard  <fchouinard@gmail.com>

    Externalized strings
	   * src/org/eclipse/linuxtools/tmf/ui/parsers/custom/Messages.java: New file.
	   * src/org/eclipse/linuxtools/tmf/ui/parsers/custom/messages.properties: New file.
	   * src/org/eclipse/linuxtools/tmf/ui/views/project/dialogs/Messages.java: New file.
	   * src/org/eclipse/linuxtools/tmf/ui/views/project/dialogs/messages.properties: New file.
	   * src/org/eclipse/linuxtools/tmf/ui/wizards/Messages.java: New file.
	   * src/org/eclipse/linuxtools/tmf/ui/wizards/messages.properties: New file.

    Suppress warning for non-externalized strings
	   * src/org/eclipse/linuxtools/tmf/ui/dialogs/ManageCustomParsersDialog.java (createDialogArea): 
	   * src/org/eclipse/linuxtools/tmf/ui/editors/TmfEditor.java (TmfEditor): 
	   * src/org/eclipse/linuxtools/tmf/ui/editors/TmfEventsEditor.java (init): 
	   * src/org/eclipse/linuxtools/tmf/ui/editors/TmfMultiPageEditorPart.java (TmfMultiPageEditorPart): 
	   * src/org/eclipse/linuxtools/tmf/ui/parsers/custom/CustomEvent.java: 
	   * src/org/eclipse/linuxtools/tmf/ui/parsers/custom/CustomEventsTable.java (static initializer): 
	   * src/org/eclipse/linuxtools/tmf/ui/parsers/custom/CustomParserProvider.java (getCategory): 
	   * src/org/eclipse/linuxtools/tmf/ui/parsers/custom/CustomTraceDefinition.java (formatTimeStamp): 